# lca-mapping-RAxML

./: LICENSE  README.md  setup.cfg  setup.py
data/: example_gene_tree.nhx  example_gene_tree_RAxML.nhx  example_species_tree.nhx
lca_map/: lca_map.py  utils.py  utils.py~
src/: __init__.py  lca_map.py~  lca_map_builder.py  lca_map_builder.py~  tools.py  tools.py~  utils.py~
tests/: test_build_lca_map.py  test_build_lca_map.py~  test_utils.py
