[metadata]
name = lca-map
version = 1.0.0
author = Alitzel Lopez Sanchez
author_email = alitzel.lopez.sanchez@usherbrooke.ca
description = A package for obtainin a reconciled tree
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AliLopSan/lca-mapping-RAxML
project_urls =
    Bug Tracker = https://github.com/AliLopSan/lca-mapping-RAxML/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    tralda
    asymmetree

[options.packages.find]
where = src
